@@ -69,7 +69,8 @@ GetOptions(
 pod2usage(-verbose => 0, -exitstatus => 0) if $options->{help};
 
 if ($options->{version}) {
-    print $FusionInventory::Agent::VERSION_STRING . "\n";
+    map { print $_."\n" } $FusionInventory::Agent::VERSION_STRING,
+        @{$FusionInventory::Agent::COMMENTS};
     exit 0;
 }
 
