@@ -12,6 +12,7 @@ use Pod::Usage;
 
 use FusionInventory::Agent::Task::ESX;
 use FusionInventory::Agent::Logger;
+use FusionInventory::Agent::Version;
 
 my $options = {
 };
@@ -30,7 +31,11 @@ GetOptions(
 pod2usage(-verbose => 0, -exitstatus => 0) if $options->{help};
 
 if ($options->{version}) {
-    print "fusioninventory-esx $FusionInventory::Agent::Task::ESX::VERSION\n";
+    my $PROVIDER = $FusionInventory::Agent::Version::PROVIDER;
+    map { print $_."\n" }
+        "fusioninventory-esx $FusionInventory::Agent::Task::ESX::VERSION",
+        "based on $PROVIDER Agent v$FusionInventory::Agent::Version::VERSION",
+        @{$FusionInventory::Agent::Version::COMMENTS};
     exit 0;
 }
 
