@@ -15,6 +15,7 @@ use FusionInventory::Agent::Task::Inventory;
 use FusionInventory::Agent::Target::Local;
 use FusionInventory::Agent::Logger;
 use FusionInventory::Agent::Config;
+use FusionInventory::Agent::Version;
 
 my $options = {
     debug  => 0,
@@ -37,8 +38,13 @@ GetOptions(
 ) or pod2usage(-verbose => 0);
 
 if ($options->{version}) {
-  print "Inventory task $FusionInventory::Agent::Task::Inventory::VERSION\n";
-  exit 0;
+    my $PROVIDER = $FusionInventory::Agent::Version::PROVIDER;
+    map { print $_."\n" }
+        "$PROVIDER Inventory task $FusionInventory::Agent::Task::Inventory::VERSION",
+        "based on $PROVIDER Agent v$FusionInventory::Agent::Version::VERSION",
+        @{$FusionInventory::Agent::Version::COMMENTS}
+        ;
+    exit 0;
 }
 pod2usage(-verbose => 0, -exitval => 0) if $options->{help};
 
