@@ -14,6 +14,7 @@ use XML::TreePP;
 use FusionInventory::Agent::Task::NetInventory;
 use FusionInventory::Agent::Tools;
 use FusionInventory::Agent::Logger;
+use FusionInventory::Agent::Version;
 
 my %types = (
     1 => 'COMPUTER',
@@ -47,8 +48,13 @@ GetOptions(
 ) or pod2usage(-verbose => 0);
 
 if ($options->{version}) {
-  print "NetInventory task $FusionInventory::Agent::Task::NetInventory::VERSION\n";
-  exit 0;
+    my $PROVIDER = $FusionInventory::Agent::Version::PROVIDER;
+    map { print $_."\n" }
+        "NetInventory task $FusionInventory::Agent::Task::NetInventory::VERSION",
+        "based on $PROVIDER Agent v$FusionInventory::Agent::Version::VERSION",
+        @{$FusionInventory::Agent::Version::COMMENTS}
+        ;
+    exit 0;
 }
 pod2usage(-verbose => 0, -exitval => 0) if $options->{help};
 
