@@ -3,6 +3,8 @@ Revision history for FusionInventory agent
 2.3.19 not yet released
 core:
 * Version & provider refactoring to simplify release process
+* Provided agent versions can now been commented by providers and  programs will
+  expose comments for --version argument
 * Tasks version is now read more efficiently and should reduce agent memory
   footing while running under daemon or service mode
 * Bump tasks versions to reflect new way of reading task version
